--- a/.github/workflows/sync-pr1.yml
+++ b/.github/workflows/sync-pr1.yml
@@ -26,7 +26,7 @@ jobs:
         git checkout ${{ github.base_ref }}
         git checkout -b $snapshot
         git push origin $snapshot
-        git log --oneline | head -n 5
+        git log --oneline
 
     - name: Create snapshot-to
       shell: bash
@@ -37,4 +37,4 @@ jobs:
         git checkout ${{ github.head_ref }}
         git checkout -b $snapshot
         git push origin $snapshot
-        git log --oneline | head -n 5 
+        git log --oneline
