--- a/.github/workflows/closed-pr.yml
+++ b/.github/workflows/closed-pr.yml
@@ -48,7 +48,7 @@ jobs:
 
     - uses: begyyal/act_await_wf_execution@v0.1
       with:
-        workflowName: 'Save snapshot of PR'
+        workflowName: 'Update process of PR'
 
     - uses: begyyal/act_revise_comments@v1
       with:
