--- a/.github/workflows/closed-pr.yml
+++ b/.github/workflows/closed-pr.yml
@@ -95,3 +95,5 @@ jobs:
         git push origin 'ss-from/'${{ steps.ready.outputs.issue-no }} --delete
         git push origin 'ss-to/'${{ steps.ready.outputs.issue-no }} --delete
   
+    - name: debug
+      run: echo ${{ toJSON(github) }}
