--- a/.github/workflows/sync-pr.yml
+++ b/.github/workflows/sync-pr.yml
@@ -11,22 +11,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Checkout
+    - name: Checkout head
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
         submodules: true
+        ref: ${{ github.head_ref }}
+
+    - name: Checkout base
+      if: ${{ startsWith(github.head_ref, 'feature/') }}
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+        submodules: true
+        ref: ${{ github.base_ref }}
+        path: ./temp
 
     - name: Create snapshot-from
       if: ${{ startsWith(github.head_ref, 'feature/') }}
       shell: bash
       run: |
+        cd ./temp
         branch=${{ github.head_ref }}
         snapshot=ss-from${branch#feature}
         [ -n "$(git branch -r | sed 's/ //g' | grep -e ^origin/$snapshot)" ] && git push origin $snapshot --delete
-        git checkout ${{ github.base_ref }}
         git checkout -b $snapshot
         git push origin $snapshot
+        cd ../ && rm -rdf ./temp
 
     - name: Create snapshot-to
       if: ${{ startsWith(github.head_ref, 'feature/') }}
@@ -35,7 +46,6 @@ jobs:
         branch=${{ github.head_ref }}
         snapshot=ss-to${branch#feature}
         [ -n "$(git branch -r | sed 's/ //g' | grep -e ^origin/$snapshot)" ] && git push origin $snapshot --delete
-        git checkout ${{ github.head_ref }}
         git checkout -b $snapshot
         git push origin $snapshot
 
