--- a/.github/workflows/create-feature.yml
+++ b/.github/workflows/create-feature.yml
@@ -2,7 +2,7 @@ name: Create feature branch
 
 on:
   issues:
-    types: [opened]
+    types: [ opened ]
 
 jobs:
   main:
@@ -11,14 +11,13 @@ jobs:
 
     steps:
     
+    - uses: begyyal/act_await_wf_execution@v0.1
+      with:
+        workflowName: 'CI'
+
     - uses: actions/checkout@v2
       with:
         ref: develop
-
-    - name: Set git configs
-      run: |
-        git config --global user.email "begyyal@gmail.com"
-        git config --global user.name "begyyal-ghost"
     
     - name: Create branch
       run: |
