--- a/.github/workflows/sync-pr.yml
+++ b/.github/workflows/sync-pr.yml
@@ -1,6 +1,7 @@
 name: Update process of PR
 
 on:
+  workflow_dispatch: 
   pull_request:
     branches: [ develop ]
     types: [ opened, synchronize ]
