--- a/.github/workflows/sync-pr.yml
+++ b/.github/workflows/sync-pr.yml
@@ -33,24 +33,21 @@ jobs:
         echo "::set-output name=do-test::${do_test:-false}"
 
     - name: Set up JDK 15
-      if: ${{ github.event_name == 'dispatch' || steps.cond1.outputs.do-test || steps.cond2.outputs.do-test }}
+      if: ${{ github.event_name == 'dispatch' || steps.cond1.outputs.do-test == 'true' || steps.cond2.outputs.do-test == 'true' }}
       uses: actions/setup-java@v2
       with:
         java-version: '15'
         distribution: 'adopt'
 
     - name: Grant execute permission for gradlew
-      if: ${{ github.event_name == 'dispatch' || steps.cond1.outputs.do-test || steps.cond2.outputs.do-test }}
-      run: chmod +x ./cmd/gradlew
-
-    - name: Build with Gradle
-      if: ${{ github.event_name == 'dispatch' || steps.cond1.outputs.do-test || steps.cond2.outputs.do-test }}
+      if: ${{ github.event_name == 'dispatch' || steps.cond1.outputs.do-test == 'true' || steps.cond2.outputs.do-test == 'true' }}
       run: |
+        chmod +x ./cmd/gradlew
         ./cmd/gradlew build -b ./lib/build.gradle -x test
         ./cmd/gradlew build -b ./cmd/build.gradle -x test
 
     - name: Test
-      if: ${{ github.event_name == 'dispatch' || steps.cond1.outputs.do-test || steps.cond2.outputs.do-test }}
+      if: ${{ github.event_name == 'dispatch' || steps.cond1.outputs.do-test == 'true' || steps.cond2.outputs.do-test == 'true' }}
       run: ./test.sh
 
     - name: Mark success of status checks
