--- a/.github/workflows/sync-pr.yml
+++ b/.github/workflows/sync-pr.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
 
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         fetch-depth: 0
         submodules: true
@@ -22,6 +22,7 @@ jobs:
       id: cond1
       if: ${{ github.event.action == 'opened' }}
       run: |
+        git branch
         [ ${{ github.event_name == 'dispatch' }} == true ] && do_test=true || \
         do_test=$(./.github/workflows/sh/check_if_need_test.sh ${{ github.base_ref }} ${{ github.head_ref }})
         echo "::set-output name=do-test::${do_test:-false}"
