--- a/.github/workflows/push-develop.yml
+++ b/.github/workflows/push-develop.yml
@@ -83,7 +83,7 @@ jobs:
           -H "AUTHORIZATION: token ${{ github.token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/statuses/${head} \
-          -d '{"state":"success","context":"ci-passed"}'
+          -d '{"state":"success","context":"ci-passed-ph2"}'
 
     - name: Await sequentially
       uses: begyyal/act_await_workflow_runs@v1
@@ -112,7 +112,7 @@ jobs:
           -H "AUTHORIZATION: token ${{ github.token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/statuses/${head} \
-          -d '{"state":"success","context":"ci-passed"}'
+          -d '{"state":"success","context":"ci-passed-ph2"}'
 
     - name: Push master
       run: |
