--- a/.github/workflows/sync-pr.yml
+++ b/.github/workflows/sync-pr.yml
@@ -59,4 +59,4 @@ jobs:
           -H "AUTHORIZATION: token ${{ github.token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.event.pull_request.head.sha }} \
-          -d '{"state":"success","context":"ci-passed"}'
+          -d '{"state":"success","context":"ci-passed-ph1"}'
