--- a/.github/workflows/push-develop.yml
+++ b/.github/workflows/push-develop.yml
@@ -8,7 +8,7 @@ jobs:
 
   dev-ci:
     runs-on: ubuntu-latest
-    if: ${{ github.actor != '' }}
+    if: ${{ github.token == secrets.GITHUB_TOKEN }}
 
     steps:
 
@@ -27,32 +27,7 @@ jobs:
         git config --global user.name "begyyal-ghost"
         fb=$(./.github/workflows/sh/find_pr_branch.sh feature ${{ github.event_path }})
         echo "::set-output name=issue-no::${fb#feature/}"
-
-    - name: Create dev-tmp
-      id: temp
-      if: ${{ steps.ready.outputs.issue-no != '' }}
-      run: |
-        tmpb=dev-tmp/${{ steps.ready.outputs.issue-no }}
-        git push origin $tmpb -d --quiet || :
-        git checkout -b $tmpb
-        git push origin $tmpb
-        echo "::set-output name=branch::$tmpb"
-
-    - name: Revise comments
-      if: ${{ steps.ready.outputs.issue-no != '' }}
-      uses: begyyal/act_revise_comments@v1
-      with:
-        prefix: "#${{ steps.ready.outputs.issue-no }}"
-        branch: ${{ steps.temp.outputs.branch }}
-
-    - name: Fetch dev-tmp
-      if: ${{ steps.ready.outputs.issue-no != '' }}
-      run: |
-        git checkout develop
-        git branch -D ${{ steps.temp.outputs.branch }}
-        git fetch 
-        git checkout ${{ steps.temp.outputs.branch }}
-
+  
     - name: Set up JDK 15
       uses: actions/setup-java@v2
       with:
@@ -68,20 +43,24 @@ jobs:
     - name: Test
       run: ./test.sh
 
-    - name: Push dev-tmp
-      id: code-update
+    - name: Revise comments
       if: ${{ steps.ready.outputs.issue-no != '' }}
       run: |
-        applied=$(git diff --exit-code --ignore-cr-at-eol --ignore-space-at-eol --quiet || echo 1)
-        [ -z $applied ] || (git add . && git commit -m "BY-CI" && git push origin HEAD)
-        echo "::set-output name=applied::${applied}"
+        ./.github/workflows/sh/revise_comments.sh \
+          "#${{ steps.ready.outputs.issue-no }}" \
+          develop \
+          ${{ github.event_path }}
 
-    - name: Mark success of status checks
-      id: status-checks
-      if: ${{ steps.ready.outputs.issue-no != '' }}
+    - name: Rebase to master
       run: |
         head=$(git log --pretty=oneline | head -n 1 | cut -d ' ' -f 1)
-        echo "::set-output name=head::${head}"
+        git fetch
+        git checkout -f master
+        git cherry-pick $(git log develop ${{ github.event.before }}..$head --pretty=oneline | cut -d " " -f 1 | tac)
+
+    - name: Mark success to status checks
+      run: |
+        head=$(git log --pretty=oneline | head -n 1 | cut -d ' ' -f 1)
         curl \
           -X POST \
           -H "AUTHORIZATION: token ${{ github.token }}" \
@@ -94,40 +73,8 @@ jobs:
       with:
         workflowName: CI
 
-    - name: Push dev if needed
-      id: push-dev
-      if: ${{ steps.code-update.outputs.applied != '' }}
-      run: |
-        git checkout ${{ github.ref_name }}
-        git cherry-pick ${{ steps.status-checks.outputs.head }}
-        git push origin ${{ github.ref_name }} || conflict=1
-        echo "::set-output name=conflict::$conflict"
-
-    - name: Handle conflict
-      id: handle-conflict
-      if: ${{ steps.push-dev.outputs.conflict != '' }}
-      run: |
-        git checkout ${{ steps.temp.outputs.branch }}
-        git reset --hard HEAD^
-        head=$(git log --pretty=oneline | head -n 1 | cut -d ' ' -f 1)
-        echo "::set-output name=head::${head}"
-        curl \
-          -X POST \
-          -H "AUTHORIZATION: token ${{ github.token }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/${{ github.repository }}/statuses/${head} \
-          -d '{"state":"success","context":"ci-passed-ph2"}'
-
     - name: Push master
       run: |
-        head=${{ steps.handle-conflict.outputs.head }}
-        [ -z "$head" ] && head=${{ steps.status-checks.outputs.head }} || :
-        [ -z "$head" ] && head=${{ github.sha }} || :
-        branch=${{ steps.temp.outputs.branch }}
-        [ -z "$branch" ] && branch=${{ github.ref_name }} || :
-        git fetch
-        git checkout -f master
-        git cherry-pick $(git log $branch ${{ github.event.before }}..$head --pretty=oneline | cut -d " " -f 1 | tac)
         git push origin master
 
     - name: Prepare to close issue
@@ -154,9 +101,3 @@ jobs:
         token64=$(printf "%s""x-access-token:${{ secrets.PAT_REPO }}" | base64)
         git config --global http.https://github.com/.extraheader "AUTHORIZATION: basic $token64"
         git push origin develop -f
-
-    - name: Termination
-      if: always()
-      run: |
-        tmpb=${{ steps.temp.outputs.branch }}
-        [ -n "$tmpb" ] && git push origin $tmpb -d || :
