--- a/.github/workflows/push-develop.yml
+++ b/.github/workflows/push-develop.yml
@@ -8,7 +8,7 @@ jobs:
 
   dev-ci:
     runs-on: ubuntu-latest
-    if: ${{ github.token == secrets.GITHUB_TOKEN }}
+    if: ${{ github.actor != '' }}
 
     steps:
 
