--- a/.github/workflows/push-develop.yml
+++ b/.github/workflows/push-develop.yml
@@ -99,11 +99,11 @@ jobs:
         method: 'PATCH'
         args: '{"state":"closed"}'
 
-    - name: Rollback
-      if: failure()
-      run: |
-        git checkout develop
-        git reset --hard ${{ github.event.before }}
-        token64=$(printf "%s""x-access-token:${{ secrets.PAT_REPO }}" | base64)
-        git config --global http.https://github.com/.extraheader "AUTHORIZATION: basic $token64"
-        git push origin develop -f
+    # - name: Rollback
+    #   if: failure()
+    #   run: |
+    #     git checkout develop
+    #     git reset --hard ${{ github.event.before }}
+    #     token64=$(printf "%s""x-access-token:${{ secrets.PAT_REPO }}" | base64)
+    #     git config --global http.https://github.com/.extraheader "AUTHORIZATION: basic $token64"
+    #     git push origin develop -f
