--- a/.github/workflows/push-develop.yml
+++ b/.github/workflows/push-develop.yml
@@ -12,11 +12,6 @@ jobs:
 
     steps:
 
-    - name: Await sequentially
-      uses: begyyal/act_await_workflow_runs@v1
-      with:
-        workflowName: CI
-
     - name: debug1
       run: echo ${{ github.actor }}
 
@@ -32,16 +27,6 @@ jobs:
         git config --global user.name "begyyal-ghost"
         fb=$(./.github/workflows/sh/find_pr_branch.sh feature ${{ github.event_path }})
         echo "::set-output name=issue-no::${fb#feature/}"
-
-    - name: Create dev-tmp
-      id: temp
-      if: ${{ steps.ready.outputs.issue-no != '' }}
-      run: |
-        tmpb=dev-tmp/${{ steps.ready.outputs.issue-no }}
-        git push origin $tmpb -d --quiet || :
-        git checkout -b $tmpb
-        git push origin $tmpb
-        echo "::set-output name=branch::$tmpb"
   
     - name: Set up JDK 15
       uses: actions/setup-java@v2
@@ -58,15 +43,24 @@ jobs:
     - name: Test
       run: ./test.sh
 
-    - name: Revise comments
+    - name: Await sequentially
+      uses: begyyal/act_await_workflow_runs@v1
+      with:
+        workflowName: CI
+
+    - name: Revise and merge
       if: ${{ steps.ready.outputs.issue-no != '' }}
       run: |
         ./.github/workflows/sh/revise_comments.sh \
           "#${{ steps.ready.outputs.issue-no }}" \
-          ${{ steps.temp.outputs.branch }} \
-          ${{ github.event_path }}
-        
-    - name: Mark success to status checks
+          develop \
+          ${{ github.event_path }} \
+          "$(pwd)/.git/" \
+          ${{ github.token }}" \
+          ${{ github.repository }} 
+
+    - name: Merge
+      if: ${{ steps.ready.outputs.issue-no == '' }}
       run: |
         head=$(git log --pretty=oneline | head -n 1 | cut -d ' ' -f 1)
         curl \
@@ -75,16 +69,9 @@ jobs:
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/statuses/${head} \
           -d '{"state":"success","context":"ci-passed-ph2"}'
-
-    - name: Cherry-pick to master
-      run: |
-        head=$(git log --pretty=oneline | head -n 1 | cut -d ' ' -f 1)
         git fetch
-        git checkout -f master
-        git cherry-pick $(git log ${{ steps.temp.outputs.branch }} ${{ github.event.before }}..$head --pretty=oneline | cut -d " " -f 1 | tac)
-
-    - name: Push master
-      run: |
+        git checkout master
+        git merge develop
         git push origin master
 
     - name: Prepare to close issue
@@ -109,9 +96,3 @@ jobs:
         git checkout develop
         git reset --hard ${{ github.event.before }}
         git push origin develop -f
-
-    - name: Termination
-      if: always()
-      run: |
-        tmpb=${{ steps.temp.outputs.branch }}
-        [ -n "$tmpb" ] && git push origin $tmpb -d || :
