--- a/.github/workflows/push-develop.yml
+++ b/.github/workflows/push-develop.yml
@@ -28,20 +28,20 @@ jobs:
         fb=$(./.github/workflows/sh/find_pr_branch.sh feature ${{ github.event_path }})
         echo "::set-output name=issue-no::${fb#feature/}"
   
-    - name: Set up JDK 15
-      uses: actions/setup-java@v2
-      with:
-        java-version: '15'
-        distribution: 'adopt'
+    # - name: Set up JDK 15
+    #   uses: actions/setup-java@v2
+    #   with:
+    #     java-version: '15'
+    #     distribution: 'adopt'
 
-    - name: Build with Gradle
-      run: |
-        chmod +x ./cmd/gradlew
-        ./cmd/gradlew build -b ./lib/build.gradle
-        ./cmd/gradlew build -b ./cmd/build.gradle
+    # - name: Build with Gradle
+    #   run: |
+    #     chmod +x ./cmd/gradlew
+    #     ./cmd/gradlew build -b ./lib/build.gradle
+    #     ./cmd/gradlew build -b ./cmd/build.gradle
 
-    - name: Test
-      run: ./test.sh
+    # - name: Test
+    #   run: ./test.sh
 
     - name: Await sequentially
       uses: begyyal/act_await_workflow_runs@v1
