--- a/.github/workflows/push-develop.yml
+++ b/.github/workflows/push-develop.yml
@@ -76,7 +76,7 @@ jobs:
       run: |
         git clone https://github.com/begyyal/act_access_ghra.git
         issue_url_base=${{ github.event.repository.issues_url }}
-        echo "::set-output name=issue-url::${issue_url_base%/*}/${{steps.ready.outputs.issue-no}}"
+        echo "::set-output name=issue-url::${issue_url_base%\{*}/${{steps.ready.outputs.issue-no}}"
 
     - name: Close issue
       if: ${{ steps.ready.outputs.issue-no != '' }}
