--- a/.github/workflows/create-feature.yml
+++ b/.github/workflows/create-feature.yml
@@ -13,7 +13,7 @@ jobs:
 
     - uses: actions/checkout@v2
       with:
-        ref: develop
+        ref: stg
     
     - name: Create branch
       run: |
