--- a/.github/workflows/sync-pr.yml
+++ b/.github/workflows/sync-pr.yml
@@ -3,7 +3,7 @@ name: sync-pr
 on:
   workflow_dispatch: 
   pull_request:
-    branches: [ develop ]
+    branches: [ stg ]
     types: [ opened, synchronize ]
 
 jobs:
@@ -23,7 +23,9 @@ jobs:
       if: ${{ github.event.action == 'opened' }}
       run: |
         [ ${{ github.event_name == 'dispatch' }} == true ] && do_test=true || \
-        do_test=$(./.github/workflows/sh/check_if_need_test.sh ${{ github.event.before }} ${{ github.event.after }})
+        do_test=$(./.github/workflows/sh/check_if_need_test.sh ${{ github.base_ref }} ${{ github.head_ref }})
+        echo ${{ github.base_ref }} ${{ github.head_ref }})
+        echo ${{ github.event.before }} ${{ github.event.after }})
         echo "::set-output name=do-test::${do_test:-false}"
 
     - name: Prepare conditions
