--- a/.github/workflows/sync-pr.yml
+++ b/.github/workflows/sync-pr.yml
@@ -23,9 +23,9 @@ jobs:
       if: ${{ github.event.action == 'opened' }}
       run: |
         [ ${{ github.event_name == 'dispatch' }} == true ] && do_test=true || \
+        git checkout ${{ github.base_ref }}
+        git checkout ${{ github.head_ref }}
         do_test=$(./.github/workflows/sh/check_if_need_test.sh ${{ github.base_ref }} ${{ github.head_ref }})
-        echo ${{ github.base_ref }} ${{ github.head_ref }})
-        echo ${{ github.event.before }} ${{ github.event.after }})
         echo "::set-output name=do-test::${do_test:-false}"
 
     - name: Prepare conditions
@@ -61,4 +61,4 @@ jobs:
           -H "AUTHORIZATION: token ${{ github.token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.event.pull_request.head.sha }} \
-          -d '{"state":"success","context":"ci-passed-ph1"}'
+          -d '{"state":"success","context":"ci-passed-stg"}'
