--- a/.github/workflows/delete-feature.yml
+++ b/.github/workflows/delete-feature.yml
@@ -1,4 +1,4 @@
-name: delete-feature
+name: Delete feature branch
 
 on:
   workflow_dispatch: 
@@ -6,8 +6,8 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-
   main:
+
     runs-on: ubuntu-latest
 
     steps:
