--- a/.github/workflows/push-stg.yml
+++ b/.github/workflows/push-stg.yml
@@ -11,6 +11,9 @@ jobs:
 
     steps:
 
+    - name: debug
+      run: echo ${{ toJSON(github) }}
+
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
