--- a/.github/workflows/sync-pr.yml
+++ b/.github/workflows/sync-pr.yml
@@ -26,7 +26,7 @@ jobs:
         git checkout ${{ github.base_ref }}
         git checkout ${{ github.head_ref }}
         do_test=$(./.github/workflows/sh/check_if_need_test.sh ${{ github.base_ref }} ${{ github.head_ref }})
-        echo "::set-output name=do-test::${do_test:-false}"
+        echo "do-test=${do_test:-false}" >> $GITHUB_OUTPUT
 
     - name: Prepare conditions
       id: cond2
@@ -34,7 +34,7 @@ jobs:
       run: |
         [ ${{ github.event_name == 'dispatch' }} == true ] && do_test=true || \
         do_test=$(./.github/workflows/sh/check_if_need_test.sh ${{ github.event.before }} ${{ github.event.after }})
-        echo "::set-output name=do-test::${do_test:-false}"
+        echo "do-test=${do_test:-false}" >> $GITHUB_OUTPUT
 
     - name: Test
       if: ${{ steps.cond1.outputs.do-test == 'true' || steps.cond2.outputs.do-test == 'true' }}
